# pptx-agent

./: .env.ollama.test  .env.template  .env.test.template  .gitignore  CONTRIBUTING.md  README.md  README_ja.md  mise.toml  pyproject.toml  pyright.config.json  pyrightconfig.test.json
.github/workflows/: ci.yml
docs/: api-reference.md  code-review-report.md  deployment.md  developer-guide.md  smartart-manual-setup.md  smartart-manual-setup_ja.md  smartart-quickstart.md  smartart-quickstart_ja.md  user-guide.md  user-guide_ja.md
docs/adr/: 0001-template-generation-plan-b.md  0002-config-test-isolation-and-validation.md  0003-qa-architecture.md  0004-template-caching.md  README.md  README_ja.md
docs/design/: integrated-pptx-system-design.md  monorepo-integration-guide.md  tech-stack-modernization.md
examples/: 01-business-quarterly-review.txt  02-technical-architecture-overview.txt  03-python-programming-basics-ja.txt  04-sales-analytics-dashboard.txt  05-product-development-process.txt  README.md  README_ja.md
scripts/: __init__.py  create_smartart_test_template.py  generate_templates.py  verify_ollama.py
src/pptx_agent/: __init__.py  config.py  constants.py  main.py  pipeline.py  templates.py
src/pptx_agent/agents/: __init__.py  analyzer_config.py  content_generator.py  llm_config.py  outline_generator.py  overflow_resolver.py  story_analyzer.py  utils.py
src/pptx_agent/agents/prompts/: __init__.py  content_generator.py  outline_generator.py  speaker_notes.py  story_analyzer.py
src/pptx_agent/cache/: __init__.py  manager.py  schemas.py  storage.py
src/pptx_agent/fixer/: __init__.py  engine.py  schemas.py
src/pptx_agent/fixer/strategies/: __init__.py  placeholder.py  style.py  text_overflow.py
src/pptx_agent/interfaces/: __init__.py  api.py  cli.py  mcp.py
src/pptx_agent/pptx_wrapper/: __init__.py  chart_builder.py  placeholder_ops.py  presentation.py  shapes.py  slide.py  slide_builder.py  smartart.py  smartart_builder.py  table_builder.py  text_handler.py  type_helpers.py  xml_utils.py
src/pptx_agent/qa/: __init__.py  engine.py  schemas.py
src/pptx_agent/qa/rules/: __init__.py  base.py  content_checks.py  layout_checks.py  register_defaults.py  registry.py  (+1 more)
src/pptx_agent/schemas/: __init__.py  outline.py  presentation.py  slide.py  template_manifest.py  text.py  validators.py  visual_assets.py
src/pptx_agent/template_parser/: __init__.py  capacity_calculator.py  manifest_builder.py  models.py  parser.py
src/pptx_agent/utils/: __init__.py  language_detector.py  logging_config.py  text_capacity.py
src/pptx_agent/validators/: __init__.py  content_validator.py  exceptions.py  file_validator.py  input_validator.py  outline_validator.py  security.py
templates/: DATA-TEMPLATE-SPEC.md  README.md  SMARTART-TEMPLATE-SPEC.md  basic-manifest.json  japanese-template.pptx
tests/: conftest.py  test_conftest_fixture.py
tests/fixtures/: chart_data_sample.txt  overflow_extreme.txt  overflow_large.txt  overflow_minor.txt  overflow_moderate.txt  sample_schemas.py  sample_story.md  sample_story_en.txt  sample_story_ja.txt  smartart_cycle_sample.txt  smartart_hierarchy_sample.txt  smartart_process_sample.txt  smartart_test_template.pptx  table_data_sample.txt
tests/integration/: conftest.py  test_basic_generation.py  test_charts_tables.py  test_constitution.py  test_editable_generation.py  test_error_resilience.py  test_fix_loop.py  test_multilanguage.py  test_overflow_resolution.py  test_pipeline_llm.py  test_qa_only.py  test_smartart.py  test_smartart_real_templates.py  test_smoke.py  test_template_analysis.py
tests/performance/: __init__.py  test_fix_performance.py  test_qa_performance.py
tests/unit/: conftest.py  test_config.py  test_generate_templates.py  test_init.py  test_main.py  test_main_path_resolution.py  test_pipeline.py  test_template_fallback.py  test_template_generation_logic.py  test_template_validation.py
tests/unit/agents/: conftest.py  test_content_generator.py  test_content_generator_chart_parsing.py  test_content_generator_charts_tables.py  test_content_generator_error_handling.py  test_content_generator_smartart.py  test_llm_config.py  test_llm_config_watsonx_project_id.py  test_outline_generator.py  test_overflow_resolver.py  test_overflow_resolver_instructions.py  test_speaker_notes_templates.py  test_story_analyzer.py  test_utils.py
tests/unit/cache/: __init__.py  test_manager.py  test_schemas.py  test_storage.py
tests/unit/fixer/: test_engine.py  test_placeholder.py  test_schemas.py  test_style.py  test_text_overflow.py
tests/unit/interfaces/: __init__.py  test_api.py  test_cli.py
tests/unit/pptx_wrapper/: test_chart_builder.py  test_placeholder_ops.py  test_pptx_wrapper.py  test_slide_builder.py  test_slide_builder_imageblock.py  test_slide_builder_layout_switching.py  test_slide_builder_performance.py  test_slide_builder_smartart.py  test_smartart_builder.py  test_smartart_xml_operations.py  test_table_builder.py  test_text_handler.py  test_text_handler_font_reduction.py  test_type_helpers.py  test_xml_utils.py
tests/unit/qa/: __init__.py  test_base.py  test_content_checks.py  test_engine.py  test_layout_checks.py  test_register_defaults.py  test_registry.py  test_schemas.py  test_style_checks.py
tests/unit/schemas/: test_outline_schema.py  test_outline_slide_number_validation.py  test_schema_validators.py  test_schemas.py  test_template_manifest.py  test_validators.py
tests/unit/template_parser/: test_capacity_calculator.py  test_manifest_builder.py  test_template_parser.py  test_template_parser_performance.py
tests/unit/utils/: test_language_detector.py  test_logging_config.py  test_text_capacity.py
tests/unit/validators/: test_content_validator.py  test_content_validator_charts_tables.py  test_content_validator_smartart.py  test_exception_handling.py  test_file_validator.py  test_input_validator.py  test_input_validator_log_levels.py  test_outline_validator.py  test_pptx_structure_size_limits.py  test_security_enhancements.py  test_security_refactored.py  test_security_validator.py  test_symlink_cwd.py
